syntax = "proto3";
package fusionchain.qassets;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
// import "cosmos/base/query/v1beta1/pagination.proto";
import "fusionchain/qassets/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/qredo/fusionchain/x/qassets/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/fusionchain/qassets/params";
  }
  // this line is used by starport scaffolding # 2
  // this line is used by scaffolder # 1
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// this line is used by starport scaffolding # 3
